--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@babel/runtime": "^7.0.0",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1",
     "webpack": "^4.20.0",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.9"
