--- a/package.json
+++ b/package.json
@@ -6,6 +6,18 @@
     "dev": "webpack-dev-server --config config/webpack.config.js",
     "prod": "webpack --config config/webpack.production.config.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --no-ignore --fix",
+      "npx stylelint",
+      "git add"
+    ]
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -28,6 +40,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
+    "husky": "^1.0.0",
+    "lint-staged": "^7.3.0",
     "style-loader": "^0.23.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.20.0",
