--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "husky": "^1.0.0",
     "lint-staged": "^7.3.0",
     "style-loader": "^0.23.0",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.3.2",
     "url-loader": "^1.1.1",
     "webpack": "^4.20.0",
     "webpack-cli": "^3.1.1",
@@ -50,6 +53,9 @@
   },
   "dependencies": {
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "styled-components": "^3.4.9"
   }
 }
