--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/runtime": "^7.0.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.2",
+    "babel-plugin-styled-components": "^1.7.1",
     "css-loader": "^1.0.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
