--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "webpack-dev-server --config config/webpack.config.js",
-    "prod": "webpack --config config/webpack.production.config.js"
+    "prod": "webpack --env.production --config config/webpack.production.config.js"
   },
   "husky": {
     "hooks": {
@@ -41,6 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^1.0.0",
     "lint-staged": "^7.3.0",
     "style-loader": "^0.23.0",
